--- a/TPC8/app/views/prizes.pug
+++ b/TPC8/app/views/prizes.pug
@@ -1,5 +1,6 @@
 extends layout
 block content
+    h1 Prizes
     table.table.table-dark.table-bordered.table-striped
         thead
             tr
